Closed Bug 199507 Opened 23 years ago Closed 23 years ago

Once focus is lost, keyboard navigation doesn't work in URL field anymore

Categories

(Core :: DOM: UI Events & Focus Handling, defect)

x86
OS/2
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: relf, Assigned: mkaply)

References

Details

(Keywords: fixed1.4.1)

Attachments

(1 file)

OS/2 build 2003032612 To reproduce: 1. Open a new (empty) tab 2. Type something in URL field (but do NOT hit Enter key) 3. Switch from Mozilla to some other application 4. Switch back to Mozilla window 5. Try to edit what you typed in URL field 6. Keyboard navigation (left/right arrows, Home, End etc. keys) doesn't work
I know I have seen this, but your scenario is not good enough. With focus problems, PLEASE be very precise. " I pressed this key, i did this" For instance, how did you open a tab, how did you switch out of Mozilla, how did you switch back?
``Focus'' stuff here is just a switching from/to mozilla in steps 3-4. Switching is done by moving mouse to other application window titlebar and clicking on it. Switching back is done in the same manner: by clicking on mozilla navigator window titlebar. How to open a tab actually doesn't matter. You can click on a button, you can press Ctrl+T, whatever...
I'm sorry, but your not understanding me. I tried your scenario and did not see the problem. For any problem that has to do with focus, very precise steps are needed. The tiniest variation can cause a different problem. Please reproduce the problem and post the EXACT steps you followed. Open the browser. Go to this page. Click in URL bar. Press Ctrl+T...etc. .etc.
Ok. Let me specify a precise sequence: 1. Set up Navigator to display a blank page at startup 2. Open a new (first) navigator window by pressing Ctrl-N 3. Open a second navigator window by pressing Ctrl-N again 4. Enter "bla-bla-bla" in the URL field of the second navigator window 5. Click on titlebar of the first navigator window 6. Click somewhere _inside the blank page_ of the second navigator window 7. Click on URL field of the second navigator window 8. Try to move cursor by arrows/Home/End/etc. keys
Have you seen this recently. Focus fixes have gone in. Thanks
build 2003052709 I still see the problem following sequence in comment #4
Key handling in Mozilla is on my machine broken up to 1.4. Page Up/Down rarely works, typing in a text field (form) requires clicking in the field by mouse twice, etc. Actually it's not very nice to use due to this problems :-(
*** Bug 214810 has been marked as a duplicate of this bug. ***
Taking
Assignee: aaronl → mkaply
Status: UNCONFIRMED → NEW
Ever confirmed: true
Argh. I should have caught this. We should be telling Mozilla that focus changed on an activate.
Attachment #129755 - Flags: review?(pedemont)
Comment on attachment 129755 [details] [diff] [review] Don't dispatch NS_GOTFOCUS with WM_ACTIVATE Looks good. Should we put this in 1.4.x?
Attachment #129755 - Flags: review?(pedemont) → review+
Fix checked into trunk and branch - a=mkaply
Status: NEW → RESOLVED
Closed: 23 years ago
Keywords: fixed1.4.1
Resolution: --- → FIXED
*** Bug 222967 has been marked as a duplicate of this bug. ***
Component: Keyboard: Navigation → User events and focus handling
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: