Bug #199507 r=pedemonte, sr=blizzard, a=mkaply OS/2 only - Don't do NS_GOTFOCUS when we get activated - bad focus stuff happens